--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -142,3 +142,7 @@ option {
     // padding: 0.375rem 0.75rem;
     color: var(--black);
 }
+
+.input-group-text {
+    border: 1px solid #e9ecef;
+}
